<resources>
    <string name="app_name">Reminder</string>
    <string name="main_interval">%1$s minutes between alarms</string>
    <string name="interval_dialog_title">Enter interval between alarms:</string>
    <string name="all_minutes">minutes</string>
    <string name="number_dialog_title">Enter number of alarms:</string>
    <string name="menuSettings">Settings</string>
    <string name="menuCalender">Hijri Calender</string>
    <string name="menuReminderPhone">Reminder Phone Call</string>
    <string name="preferences_duration_title">Duration of a ringtone and vibrate</string>
    <string name="preferences_ringtone_title">Choose ringtone</string>
    <string name="preferences_default_duration">30 seconds</string>
    <string name="preferences_default_ringtone_name">Basic</string>
    <string name="main_alarm_turned_off_toast">All alarms turned off</string>
    <string name="main_alarm_turned_on_toast">All alarms turned on</string>
    <string name="main_alarm_reset_toast">All alarms reset</string>
    <string name="timepicker_dialog_title">Set time of the first alarm:</string>
    <string name="all_time_left">%1$s hr %2$s min left</string>
    <string name="notification_icon_title">Alarms turned on</string>
    <string name="main_first_alarm_time">First alarm time: %1$s</string>
    <string name="choose_ringtone_chooser_title">Select a file</string>

    <string name="dismiss_alarm_notification_title">Alarm!</string>
    <string name="dismiss_alarm_notification_body">You\'ve set an alarm to %1$s</string>
    <string name="dismiss_alarm_notification_dismiss_button_title">Dismiss</string>

    <string name="interval_dialog_ok_button_name">OK</string>
    <string name="interval_dialog_cancel_button_name">Cancel</string>
    <string name="number_of_alarms_dialog_ok_button_name">OK</string>
    <string name="number_of_alarms_dialog_cancel_button_name">Cancel</string>
    <string name="test">Test</string>
    <string name="action_settings">Settings</string>
    <string name="time_picker_example">Time Picker Example</string>
    <string name="time_pick">Pick the time and press save button</string>
    <string name="time_save">Pick Time</string>
    <string name="time_selected">Time selected</string>
    <string name="time_current">The Time is:</string>

    <string name="switch_turn_on_title">Sunrise Alarm</string>
    <string name="switch_turn_on">Enable</string>
    <string name="switch_turn_off">Disable</string>
    <string name="share_app">Share App</string>
    <string name="rate_app">Rate App</string>
    <string name="not_now">Not Now</string>
    <string name="rate_now">Rating</string>
    <string name="description">If you enjoy using this app, it would be great to take a moment to rate it.</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="vibrate">Vibrate</string>
    <string name="repeated_alarm">Repeated Alarm</string>
    <string name="repeat">Repeat</string>
    <string name="next_alarm_title">Next Alarm Time</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="set">Set</string>
    <string name="all_days">Every day</string>
    <string name="before_start_time">Before Start Time</string>
    <string name="after_start_time">After Start Time</string>
    <string name="before_End_time">Before End Time</string>
    <string name="after_End_time">After End Time</string>
    <string name="no_alarm_set">No alarm set</string>
    <string name="dismiss_title">Dismiss</string>
    <string name="no_alarm">There is no  </string>
    <string name="tap_on_icon">Tap on plus icon to set new alarm</string>
    <string name="settings">Settings</string>
    <string name="buy_premium">Buy Premium</string>
    <string name="dia_text">Dialog Text</string>
    <string name="dia_text_content">“Loser press the snooze button”</string>
    <string name="switch_on">On</string>
    <string name="switch_off">Off</string>
    <string name="alarm_label">Alarm Label</string>
    <string name="alarm_volume">Alarm Volume</string>
    <string name="alarm_tone">Alarm Tone</string>
    <string name="snooze_title">Snooze</string>
    <string name="interval_title">Interval</string>
    <string name="intervalOne">05 Minutes</string>
    <string name="intervalTwo">10 Minutes</string>
    <string name="intervalThree">15 Minutes</string>
    <string name="repeatlOne">3 Times</string>
    <string name="repeatTwo">5 Times</string>
    <string name="repeatThree">Continiously</string>
    <string name="dialog_text">Dialog Text</string>
    <string name="stop">STOP</string>
    <string name="privacy">Privacy Policy</string>
    //test
    <string name="Ads_mob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="Ads_mob_banner_id">ca-app-pub-3940256099942544/6300978111</string>

    //original
    <!--    <string name="Ads_mob_app_id">ca-app-pub-9401766416999660~3467334777</string>-->
    <!--    <string name="Ads_mob_banner_id">ca-app-pub-9401766416999660/3275763086</string>-->


    <plurals name="main_number_of_alarms">
        <item quantity="one">%1$s alarm</item>
        <item quantity="other">%1$s alarms</item>
    </plurals>

    // calender

    <string name="hijri_date_picker_done" translatable="false">Done</string>
    <string name="hijri_date_picker_cancel" translatable="false">Cancel</string>
    <string name="hijri_date_picker_year" translatable="false">Year</string>
    <string name="January" translatable="false">January</string>
    <string name="February" translatable="false">February</string>
    <string name="March" translatable="false">March</string>
    <string name="April" translatable="false">April</string>
    <string name="May" translatable="false">May</string>
    <string name="June" translatable="false">June</string>
    <string name="July" translatable="false">July</string>
    <string name="August" translatable="false">August</string>
    <string name="September" translatable="false">September</string>
    <string name="October" translatable="false">October</string>
    <string name="November" translatable="false">November</string>
    <string name="December" translatable="false">December</string>

    <string-array name="hijri_date_picker_days">
        <item>SUN</item>
        <item>MON</item>
        <item>TUE</item>
        <item>WED</item>
        <item>THU</item>
        <item>FRI</item>
        <item>SAT</item>
    </string-array>


    <string name="hijri_date_picker_cancel_arabic" translatable="false">الغاء</string>
    <string name="dhu_alhijjah" translatable="false">Dhu al-Hijjah</string>
    <!--    <string name="dhu_alhijjah" translatable="false">ذو الحجة</string>-->
    <string name="hijri_date_picker_done_arabic" translatable="false">موافق</string>
    <string name="dhu_alqadah" translatable="false">Dhu al-Qi\'dah</string>
    <!--    <string name="dhu_alqadah" translatable="false">ذو القعدة</string>-->
    <string name="jamada_i" translatable="false">Jumada al-awwal</string>
    <!--    <string name="jamada_i" translatable="false">جماد الاول</string>-->
    <string name="jamada_ii" translatable="false">Jumada al-thani</string>
    <!--    <string name="jamada_ii" translatable="false">جماد الثاني</string>-->
    <string name="muharram" translatable="false">Muharram</string>
    <!--    <string name="muharram" translatable="false">محرم</string>-->
    <string name="rabi_i" translatable="false">Rabi\' al-awwal</string>
    <!--    <string name="rabi_i" translatable="false">ربيع الاول</string>-->
    <string name="rabi_ii" translatable="false">Rabi\' al-thani</string>
    <!--    <string name="rabi_ii" translatable="false">ربيع الثاني</string>-->
    <string name="rajab" translatable="false">Rajab</string>
    <!--    <string name="rajab" translatable="false">رجب</string>-->
    <string name="ramadan" translatable="false">Ramadan</string>
    <!--    <string name="ramadan" translatable="false">رمضان</string>-->
    <string name="safar" translatable="false">Safar</string>
    <!--    <string name="safar" translatable="false">صفر</string>-->
    <string name="shaban" translatable="false">Sha\'aban</string>
    <!--    <string name="shaban" translatable="false">شعبان</string>-->
    <string name="shawal" translatable="false">Shawwal</string>
    <!--    <string name="shawal" translatable="false">شوال</string>-->
    <string name="hijri_date_picker_year_arabic" translatable="false">السنة</string>
    <string-array name="hijri_date_picker_days_arabic">
        <item>SUN</item>
        <item>MON</item>
        <item>TUE</item>
        <item>WED</item>
        <item>THU</item>
        <item>FRI</item>
        <item>SAT</item>
    </string-array>

    <!--    <string-array name="hijri_date_picker_days_arabic">-->
    <!--        <item>TUE</item>-->
    <!--        <item>WED</item>-->
    <!--        <item>THU</item>-->
    <!--        <item>FRI</item>-->
    <!--        <item>SAT</item>-->
    <!--        <item>SUN</item>-->
    <!--        <item>MON</item>-->
    <!--    </string-array>-->

    <!--    <string-array name="hijri_date_picker_days_arabic">-->
    <!--        <item>الاحد</item>-->
    <!--        <item>الاثنين</item>-->
    <!--        <item>الثلاثاء</item>-->
    <!--        <item>الاربعاء</item>-->
    <!--        <item>الخميس</item>-->
    <!--        <item>الجمعة</item>-->
    <!--        <item>السبت</item>-->
    <!--    </string-array>-->

    <!--<string name="calendar_confirm">Confirm</string>-->
    <string name="date_time_header">Date and Time</string>

    <string name="search" translatable="false">Search&#8230;</string>

    <string name="time_text">TIME</string>
    <string name="calendar_confirm">DONE</string>
    <string name="header_calendar">Calendar</string>
    <string name="calendar_cancel">Cancel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>