<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SetPrayerReminderActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/white" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingBottom="@dimen/dp20"
        app:layout_constraintBottom_toTopOf="@id/btnSetAlarm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvTitleBeforeStartTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp20"
                android:text="@string/before_start_time"
                android:textColor="@color/text_color_active_bold"
                android:textSize="@dimen/sp18"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <SeekBar
                android:id="@+id/sbBeforeStart"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp5"
                android:layout_marginTop="@dimen/dp10"
                android:layout_marginEnd="@dimen/dp5"
                android:max="24"
                android:theme="@style/MySeekBar"
                android:thumb="@drawable/thumb"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitleBeforeStartTime" />

            <TextView
                android:id="@+id/tvPickingBeforeStartTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                android:layout_marginEnd="@dimen/dp20"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/sp18"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sbBeforeStart" />

            <TextView
                android:id="@+id/tvLine"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/dp20"
                android:layout_marginTop="@dimen/dp10"
                android:layout_marginEnd="@dimen/dp20"
                android:background="#D0E3EF"
                app:layout_constraintTop_toBottomOf="@id/tvPickingBeforeStartTime" />

            <TextView
                android:id="@+id/tvTitleAfterStartTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp20"
                android:text="@string/after_start_time"
                android:textColor="@color/text_color_active_bold"
                android:textSize="@dimen/sp18"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLine" />

            <SeekBar
                android:id="@+id/sbAfterStart"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp5"
                android:layout_marginTop="@dimen/dp10"
                android:layout_marginEnd="@dimen/dp5"
                android:max="24"
                android:theme="@style/MySeekBar"
                android:thumb="@drawable/thumb"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitleAfterStartTime" />

            <TextView
                android:id="@+id/tvPickingAfterStartTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                android:layout_marginEnd="@dimen/dp20"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/sp18"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sbAfterStart" />

            <TextView
                android:id="@+id/tvLine2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/dp20"
                android:layout_marginTop="@dimen/dp10"
                android:layout_marginEnd="@dimen/dp20"
                android:background="#D0E3EF"
                app:layout_constraintTop_toBottomOf="@id/tvPickingAfterStartTime" />

            <TextView
                android:id="@+id/tvTitleBeforeEndTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp20"
                android:text="@string/before_End_time"
                android:textColor="@color/text_color_active_bold"
                android:textSize="@dimen/sp18"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLine2" />

            <SeekBar
                android:id="@+id/sbBeforeEnd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp5"
                android:layout_marginTop="@dimen/dp10"
                android:layout_marginEnd="@dimen/dp5"
                android:max="24"
                android:theme="@style/MySeekBar"
                android:thumb="@drawable/thumb"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitleBeforeEndTime" />

            <TextView
                android:id="@+id/tvPickingBeforeEndTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                android:layout_marginEnd="@dimen/dp20"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/sp18"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sbBeforeEnd" />

            <TextView
                android:id="@+id/tvLine3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/dp20"
                android:layout_marginTop="@dimen/dp10"
                android:layout_marginEnd="@dimen/dp20"
                android:background="#D0E3EF"
                app:layout_constraintTop_toBottomOf="@id/tvPickingBeforeEndTime" />

            <TextView
                android:id="@+id/tvTitleAfterEndTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp20"
                android:text="@string/after_End_time"
                android:textColor="@color/text_color_active_bold"
                android:textSize="@dimen/sp18"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLine3" />

            <SeekBar
                android:id="@+id/sbAfterEnd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp5"
                android:layout_marginTop="@dimen/dp10"
                android:layout_marginEnd="@dimen/dp5"
                android:max="24"
                android:theme="@style/MySeekBar"
                android:thumb="@drawable/thumb"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitleAfterEndTime" />

            <TextView
                android:id="@+id/tvPickingAfterEndTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                android:layout_marginEnd="@dimen/dp20"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/sp18"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sbAfterEnd" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


    <Button
        android:id="@+id/btnTestAlarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp24"
        android:layout_marginBottom="@dimen/dp32"
        android:background="@drawable/ic_btn_test_bg"
        android:text="@string/test"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/sp20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/btnSetAlarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp24"
        android:layout_marginBottom="@dimen/dp32"
        android:background="@drawable/ic_btn_set_bg"
        android:text="@string/set"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/sp20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>