<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_calendar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/linear_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingStart="@dimen/small_margin_padding"
            android:paddingLeft="@dimen/small_margin_padding"
            android:paddingTop="10dp"
            android:paddingEnd="@dimen/small_margin_padding"
            android:paddingRight="@dimen/small_margin_padding"
            android:paddingBottom="10dp"
            android:text="@string/header_calendar"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:scrollbars="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/linear_datePicker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/linear_datepicker_header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="@android:color/white"
                        android:layoutDirection="ltr">

                        <RelativeLayout
                            android:id="@+id/relative_previous"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_toStartOf="@+id/dashBoadLinerLayout"
                            android:paddingStart="7dp"
                            android:paddingEnd="@dimen/small_margin_padding">

                            <ImageView
                                android:id="@+id/previousButton"
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:src="@drawable/previous_icon" />
                        </RelativeLayout>

                        <LinearLayout
                            android:id="@+id/dashBoadLinerLayout"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_gravity="center"
                            android:gravity="center_vertical|center_horizontal"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/monthTextView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="7dp"
                                android:text="محرم"
                                android:textColor="@color/gray"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/yearTextView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="7dp"
                                android:text="1437"
                                android:textColor="@color/gray"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                        <RelativeLayout
                            android:id="@+id/relative_next"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_toEndOf="@+id/dashBoadLinerLayout"
                            android:paddingStart="@dimen/small_margin_padding"
                            android:paddingEnd="7dp">

                            <ImageView
                                android:id="@+id/nextButton"
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:src="@drawable/next_icon" />
                        </RelativeLayout>

                    </RelativeLayout>


                    <TableLayout
                        android:id="@+id/calendarTableLayoutDay"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/white"
                        android:paddingStart="8dp"
                        android:paddingLeft="8dp"
                        android:paddingTop="5dp"
                        android:paddingEnd="8dp"
                        android:paddingRight="8dp"
                        android:paddingBottom="5dp" />

                    <TableLayout
                        android:id="@+id/calendarTableLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:paddingStart="8dp"
                        android:paddingLeft="8dp"
                        android:paddingTop="10dp"
                        android:paddingEnd="8dp"
                        android:paddingRight="8dp"
                        android:paddingBottom="5dp" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_bottom_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingStart="@dimen/small_margin_padding"
            android:paddingLeft="@dimen/small_margin_padding"
            android:paddingTop="13dp"
            android:paddingEnd="@dimen/small_margin_padding"
            android:paddingRight="@dimen/small_margin_padding"
            android:paddingBottom="13dp"
            android:text="@string/calendar_cancel"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tv_done"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingStart="@dimen/small_margin_padding"
            android:paddingLeft="@dimen/small_margin_padding"
            android:paddingTop="13dp"
            android:paddingEnd="@dimen/small_margin_padding"
            android:paddingRight="@dimen/small_margin_padding"
            android:paddingBottom="13dp"
            android:text="@string/calendar_confirm"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>